--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>The Buttskie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Information about The Buttskie, software developer and gamer" />
+  </head>
+  <body>
+    <h1>Hello World!</h1>
+  </body>
+</html>
